@startuml
hide member

hide circle
skinparam classAttributeIconSize 0

class FitNus
package parser {
    class Parser
}

package command {
    class "{Abstract}\nCommand"
}

package database {
    class FoodTrackerDatabase
}

package storage {
    class Storage
}

package tracker {
    class FoodTracker
    class Food
}

package utility {
    class Ui
}

Storage ..> FoodTrackerDatabase
FitNus *-> FoodTrackerDatabase
"{Abstract}\nCommand" ..> FoodTrackerDatabase
Parser ..> FoodTrackerDatabase
FoodTrackerDatabase ..> Parser
FoodTrackerDatabase *-> FoodTracker
FoodTrackerDatabase ..> Food
FoodTrackerDatabase ..> Ui
@enduml